--- a/shared/tests/gitlab.yml
+++ b/shared/tests/gitlab.yml
@@ -1,6 +1,6 @@
 schemaVersion: "2.0.0"
 metadataTest:
-  envVars:
+  env:
     # for more info, see:
     #   https://docs.gitlab.com/ee/ci/docker/using_docker_build.html
     - key: DOCKER_HOST
