added /var/run/docker.sock volume for base

--- a/shared/tests/base.yml
+++ b/shared/tests/base.yml
@@ -12,3 +12,5 @@ commandTests:
   command: "which"
   args: ["docker-compose"]
   expectedOutput: ["/bin/docker-compose"]
+metadataTest:
+  volumes: ["/var/run/docker.sock"]
