--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,33 +1,51 @@
-image: usvc/ci-docker:gitlab-latest
-services:
-  - docker:dind
 stages:
   - build
-  - test
+  - verify
   - publish
+
+services:
+  - docker:19.03.12-dind
+image: usvc/ci-docker:20210508094511
+before_script:
+  - apk add --no-cache git make
 
 build:
   stage: build
-  artifacts:
-    expire_in: 1 day
+  cache:
+    key: ${CI_JOB_NAME}
     paths:
-      - ./.export
+      - ./images
+  artifacts:
+    expire_in: 1 week
+    paths:
+      - ./images
   script:
     - make build
-    - make ci.export
+    - make export
+
+lint:
+  stage: verify
+  script:
+    - make lint
 
 test:
-  stage: test
-  dependencies: ["build"]
+  stage: verify
+  dependencies: [build]
   script:
-    - make ci.import
+    - make import
     - make test
 
-dockerhub:
-  stage: publish
-  dependencies: ["build"]
+scan:
+  stage: verify
+  dependencies: [build]
   script:
-    - make ci.import
-    - docker login ${DOCKER_REGISTRY_URL} -u ${DOCKER_REGISTRY_USER} -p ${DOCKER_REGISTRY_PASSWORD}
-    - make publish
-    - docker logout
+    - make import
+    - make scan
+
+publish:
+  stage: publish
+  dependencies: [build]
+  script:
+    - make import
+    - docker login ${DOCKER_REGISTRY_URI} -u ${DOCKER_REGISTRY_USER} -p ${DOCKER_REGISTRY_PASSWORD}
+    - make publish-ci
